--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <title>compoundGraph</title>
     </head>
     <body>
-        <a href="comtest.html">未完成のグラフ</a>
+        <a href="comtest.html">現状のグラフ、エッジに不具合有</a>
         <br>
+        子にサブグラフを持つサブグラフ(g11やg12)を閉じ、そのあと閉じたサブグラフを全て開こうとすると
+        復元するエッジの両端のどちらかが削除されているため、エラーが発生する。
         <a href="comtestdemo.html">デモ用、ノードのみ</a>
     </body>
 </html>
