--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <body>
         <a href="comtest.html">現状のグラフ、エッジに不具合有</a>
         <br>
-        子にサブグラフを持つサブグラフ(g11やg12)を閉じ、そのあと閉じたサブグラフを全て開こうとすると
-        復元するエッジの両端のどちらかが削除されているため、エラーが発生する。
+        <p>子にサブグラフを持つサブグラフ(g11やg12)を閉じ、そのあと閉じたサブグラフを全て開こうとすると<br>
+            復元するエッジの両端のどちらかが削除されているため、エラーが発生する。</p>
+        <br>
         <a href="comtestdemo.html">デモ用、ノードのみ</a>
     </body>
 </html>
