--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>compoundGraph</title>
     </head>
     <body>
-        <a href="comtest.html">現状のグラフ、エッジに不具合有</a>
-        <p>子にサブグラフを持つサブグラフ(g11やg12)を閉じ、そのあと閉じたサブグラフを全て開こうとすると<br>
-            復元するエッジの両端のどちらかが削除されているため、エラーが発生する。</p>
+        <a href="comtest.html">現状のグラフ</a>
+        <a>子にサブグラフを持つサブグラフ(g11やg12)を閉じ、そのあと閉じたサブグラフを全て開こうとすると<br>
+            復元するエッジの両端のどちらかが削除されているため、エラーが発生する。</a>
         <br>
         <a href="comtestdemo.html">デモ用、ノードのみ</a>
     </body>
