--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <body>
         <a href="comtest.html">現状のグラフ</a>
         <br>
-        <a>子にサブグラフを持つサブグラフ(g11やg12)を閉じ、そのあと閉じたサブグラフを全て開こうとすると<br>
-            復元するエッジの両端のどちらかが削除されているため、エラーが発生する。</a>
-        <br>
-        <br>
-        <a href="comtestdemo.html">デモ用、ノードのみ</a>
+        <a>サブグラフを閉じた際などのエッジの処理が未完成</a>
     </body>
 </html>
