--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>compoundGraph</title>
     </head>
     <body>
-        <a href="comtest.html">現状のグラフ</a>
+        <a href="./compound_graph/hierarchical_graph.html">emgraphへの移植</a>
+        <a href="comtest.html">デモ用複合グラフ</a>
     </body>
 </html>
