--- a/compound_graph/hierarchical_graph.html
+++ b/compound_graph/hierarchical_graph.html
@@ -2,16 +2,12 @@
 <html>
     <head>
         <title>hierarchical-emgraph</title>
-        <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script-->
-        <script src="./js/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="./draw_graph.js"></script>
-        <!--script src="https://unpkg.com/cytoscape@3.19.1/dist/cytoscape.min.js"></script-->
-        <script src="./js/cytoscape.min.js"></script>
-        <!--script src="https://unpkg.com/bootstrap@4.2.1/dist/js/bootstrap.js"></script-->
-        <script src="./js/bootstrap.js"></script>
+        <script src="https://unpkg.com/cytoscape@3.19.1/dist/cytoscape.min.js"></script>
+        <script src="https://unpkg.com/bootstrap@4.2.1/dist/js/bootstrap.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!--link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"-->
-        <link rel="stylesheet" href="./js/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="./style.css"></link>
     </head>
     <body>
